# tree-sitter-blox

./: Cargo.toml  grammar.js  tree-sitter.json
bindings/rust/: build.rs  lib.rs
queries/: brackets.scm  highlights.scm  locals.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: Comments.txt  Empty.txt  Expressions.txt  Function definitions.txt  Lambdas.txt  Literals.txt  Operators.txt
