[package]
name = "tree-sitter-blox"
description = "A parser for the Blox language"
version = "0.1.0"
authors = ["Michael Melanson <michael@michaelmelanson.net>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "blox"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-blox"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2.5"

[dev-dependencies]
tree-sitter = "0.24.3"
